links to projects working

--- a/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
@@ -57,7 +57,7 @@
            title       = "Learn HTML fast by making your own web page",
            description = "Learn HTML basics using Mozilla's Thimble to make your first web page. This starter project helps you play around with the most common HTML elements and tags using a simple side-by-side visual editor. It's a great way to gain some of the baseline skills you'll need for other Webmaker projects&mdash;or to start a project of your own! If you have no HTML experience, give this one a go first. You'll be surprised by how easy it is to get started.",
            author      = "Mozilla",
-           url         = url('edit_project', 'wrangler'),
+           url         = url('edit_project', 'opengallery'),
            img         = "/media/img/projects/opengallery.png",
          ) 
       }}
@@ -65,7 +65,7 @@
            title       = "Make a map of your world on the web",
            description = "Create your own 8-bit style “map” of your favorite web sites, images and places. Use HTML to remix and create your own classic video game-style map of your favorite stuff on the web. Add images, text, links and places, then share your completed map with friends so they can explore the world you've created.",
            author      = "Mozilla",
-           url         = url('edit_project', 'map'),
+           url         = url('edit_project', 'opendisco'),
            img         = "/media/img/projects/opendisco.png",
          ) 
       }}
@@ -73,7 +73,7 @@
            title       = "Play Bakery Bash",
            description = "Throw an awesome kitchen party on the web. In this web-based game, your mission is to help “Loaf Cat” throw a sweet party in her cozy bakery&mdash;fending off uninvited party-crashers, inviting your own guest celebrities from across the web, and (of course) adding some awesome music to get the party started! Use HTML to fix links and swap images to advance. It's simple but strangely addictive. Did we mention the dancing cats?",
            author      = "Mozilla",
-           url         = url('edit_project', 'bakery'),
+           url         = url('edit_project', 'opencinema'),
            img         = "/media/img/projects/opencinema.png",
          ) 
       }}
@@ -81,7 +81,7 @@
            title       = "Make your own animated avatar",
            description = "Mix and match elements to create your own webmaker avatar. Choose from a mix of different googly eyes, mustaches, colors and styles to create your own unique webmaker character. It's like the cooler web version of “Mr. Potato Head”. Then fill in the blanks and add your own links to create a portfolio of projects you've created online. The result: your own shareable webmaker portfolio page. Use it to show off all the great stuff you've made.",
            author      = "Mozilla",
-           url         = url('edit_project', 'avataromatic'),
+           url         = url('edit_project', 'openmasterpiece'),
            img         = "/media/img/projects/openmasterpiece.png",
          ) 
       }}
