adding openwebville to the project page, but without a specific graphic or copye

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -50,6 +50,16 @@
       }}
 
       #}
+
+      {{ project(
+           title       = "Open Webville",
+           description = "tbd", 
+           author      = "tbd",
+           url         = url('view_project', 'openwebville'),
+           img         = "/media/img/projects/opengallery.png",
+         ) 
+      }}
+
 	    {{ project(
            title       = "Make Your Own Animal",
            description = "Mix and match elements to create your own amazing creature. Draw from some of the world's most Evolutionarily Distinct and Globally Endangered animals (EDGE species) to remix, build and name your own fantastic animal&mdash;think “Elephwhal”, “Rhinogator” or “Bunnel”&mdash;along with a web page to introduce them to the world.", 
