--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -53,8 +53,9 @@
 
       {{ project(
            title       = "Open Webville",
-           description = "tbd", 
-           author      = "tbd",
+           description = "In this series of mini-games you'll work with the citizens of Open WebVille to understand how to 
+           use and reference openly licensed works.", 
+           author      = "Creative Commons",
            url         = url('view_project', 'openwebville'),
            img         = "/media/img/projects/opengallery.png",
          ) 
