moved fake thimble badges to separate file in test/ dir.

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -37,6 +37,8 @@
     <script>
     require.paths.thimble = '{{ MEDIA_URL }}js/thimble';
     require.paths.clopenbadger = '{{ MEDIA_URL }}clopenbadger';
+    require.paths['fake-thimble-badges'] = '{{ MEDIA_URL }}/test/' +
+                                           'fake-thimble-badges';
     if (!require.packages)
       require.packages = [];
     require.packages.push({
@@ -48,35 +50,6 @@
     <script>
     "use strict";
 
-    define("fake-thimble-badges", [
-      "clopenbadger/test/fake-clopenbadger-server"
-    ], function(FakeClopenbadgerServer) {
-      var url = "http://fake-clopenbadger";
-      FakeClopenbadgerServer.setup({
-        urlPrefix: url,
-        availableBadges: {
-          "FIRST_LOGIN": {
-            "name": "First Login",
-            "description": "Like a champion, you logged in...",
-            "criteria": "Can log into a site that uses Persona for auth.",
-            "image": "https://wiki.mozilla.org/images/b/bb/Merit-badge.png",
-            "behaviors": [{"name": "LOGGED_IN", "score": 1}],
-            "prerequisites": []
-          },
-          "HYPERLINKER": {
-            "name": "Hyperlinker",
-            "description": "You made links.",
-            "criteria": "Can make anchor tags with valid href attributes.",
-            "image": "https://wiki.mozilla.org/images/b/bb/Merit-badge.png",
-            "behavior": "HYPERLINK",
-            "behaviors": [{"name": "HYPERLINK", "score": 1}],
-            "prerequisites": []
-          }
-        }
-      });
-      return {url: url};
-    });
-    
     define("main", function(require) {
       var $ = require("jquery"),
           FriendlycodeEditor = require('friendlycode'),
