Attempt to use navigator.id.get() instead of .watch().
This might fix #556.

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -60,8 +60,8 @@
           WebmakerNav = require("webmaker-nav"),
           webmakerNav = new WebmakerNav({
             container: $("#webmaker-nav")[0],
-            loginBtnCallback: function() { navigator.id.request(); },
-            logoutBtnCallback: function() { navigator.id.logout(); }
+            loginBtnCallback: function() { auth.login(); },
+            logoutBtnCallback: function() { auth.logout(); }
           }),
           auth = BrowserIDAjax({
             email: "{{ user.email }}",
