--- a/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
@@ -41,7 +41,7 @@
           <h1>Open Webville</h1>
         </hgroup>
         <p>
-          Open WebVille isn’t just your run-of-the-mill "Ville". You see, it’s managed by Madame Lille a former french 
+          Open WebVille isn’t just your run-of-the-mill "Ville." You see, it’s managed by Madame Lille, a former french 
           politician and robot who is relaunching her career in a new  direction:  focusing more on velvet bird painting, 
           organic farming, and protecting the Open Web. In this series of mini-games Madame Lille has started putting together 
           a guidebook for the citizens of Open WebVille to understand how to use and reference openly licensed works. 
@@ -49,7 +49,7 @@
 
         <p>
           Use your Open Web ways and HTML dexterity to help her finish her work. These projects are offered in 
-          partnership with the Creative Commons School of Open.
+          partnership with the <a href="https://p2pu.org/en/schools/school-of-open/">Creative Commons School of Open</a>.
         </p>
       </div>
     </div>
