copy changes for openwebville

--- a/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
@@ -49,7 +49,7 @@
 
         <p>
           Use your Open Web ways and HTML dexterity to help her finish her work. These projects are offered in 
-          partnership with the <a href="https://p2pu.org/en/schools/school-of-open/">Creative Commons School of Open</a>.
+          partnership with the <a href="https://p2pu.org/en/schools/school-of-open/">School of Open</a>.
         </p>
       </div>
     </div>
@@ -61,7 +61,7 @@
       {{ project(
            title       = "Open Webville Gallery",
            description = "",
-           author      = "Creative Commons",
+           author      = "",
            url         = url('edit_project', 'opengallery'),
            img         = "/media/img/projects/opengallery.png",
          ) 
@@ -69,7 +69,7 @@
 	    {{ project(
            title       = "Open Webville Discotheque",
            description = "",
-           author      = "Creative Commons",
+           author      = "School of Open",
            url         = url('edit_project', 'opendisco'),
            img         = "/media/img/projects/opendisco.png",
          ) 
@@ -77,7 +77,7 @@
       {{ project(
            title       = "Open Webville Cinema",
            description = "",
-           author      = "Creative Commons",
+           author      = "School of Open",
            url         = url('edit_project', 'opencinema'),
            img         = "/media/img/projects/opencinema.png",
          ) 
@@ -85,7 +85,7 @@
 	    {{ project(
            title       = "Open Webville Make Your Own Masterpiece (Boss Level)",
            description = "",
-           author      = "Creative Commons",
+           author      = "School of Open",
            url         = url('edit_project', 'openmasterpiece'),
            img         = "/media/img/projects/openmasterpiece.png",
          ) 
