--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -55,7 +55,7 @@
            title       = "Open Webville",
            description = "In this series of mini-games you'll work with the citizens of Open WebVille to understand how to 
            use and reference openly licensed works.", 
-           author      = "Creative Commons",
+           author      = "School of Open",
            url         = url('view_project', 'openwebville'),
            img         = "/media/img/projects/opengallery.png",
          ) 
