--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -1,4 +1,4 @@
-{% extends "website/layout.html" %}
+pen{% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
 {% block page_id %}projects{% endblock %}
@@ -53,7 +53,7 @@
 
       {{ project(
            title       = "Open Webville",
-           description = "In this series of mini-games you'll work with the citizens of Open WebVille to understand how to 
+           description = "In this series of mini-games you'll work with the citizens of Open Webville to understand how to 
            use and reference openly licensed works.", 
            author      = "School of Open",
            url         = url('view_project', 'openwebville'),
