updated webmaker-nav. pushing to backpack now calls the issuer api.

--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -134,5 +134,6 @@
       document.body.appendChild(script);
     });
     </script>
+    <script src="//beta.openbadges.org/issuer.js" async></script>
   </body>
 </html>
