--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -18,10 +18,13 @@
      <div id="webmaker-nav"></div>
 
     <header id="thimble-header">
-      <div class="logo">
-        <a href="/">
-          <img src="{{ MEDIA_URL }}img/thimble-logo.png" alt="Mozilla Thimble">
-        </a>
+      <div class="header-content">
+        <div class="logo">
+          <a href="/">
+            <img src="{{ MEDIA_URL }}img/thimble-logo.png" alt="Mozilla Thimble">
+          </a>
+        </div>
+        <div class="breadcrumbs"></div>
       </div>
     </header>
 
