--- a/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/openwebville.html
@@ -61,7 +61,7 @@
       {{ project(
            title       = "Open Webville Gallery",
            description = "",
-           author      = "",
+           author      = "School of Open",
            url         = url('edit_project', 'opengallery'),
            img         = "/media/img/projects/opengallery.png",
          ) 
