removing pen...seriously

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -1,4 +1,4 @@
-pen{% extends "website/layout.html" %}
+{% extends "website/layout.html" %}
 {% block head %}
 {% endblock %}
 {% block page_id %}projects{% endblock %}
